--- a/main.css
+++ b/main.css
@@ -1,1 +1,169 @@
 /* Write your CSS code in this file */
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200&display=swap");
+
+#main {
+  font-family: "Roboto Mono", monospace;
+  font-size: 22px;
+  color: rgb(245, 245, 245);
+  background-color: #23282c;
+  text-align: center;
+}
+
+.ul {
+  display: inline-block;
+  padding: 0px;
+  margin: 0px;
+}
+
+.button {
+  display: inline-block;
+  background-color: #434c53;
+  padding: 8px 24px;
+  border: 0.25px solid #64727c;
+  margin: 8px;
+  border-radius: 8px;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 200;
+  color: rgb(245, 245, 245);
+  text-align: center;
+  transition: all 0.2s;
+}
+
+.button:hover {
+  border: 0.25px solid rgb(245, 245, 245);
+  color: rgb(245, 245, 245);
+  background-color: #566169;
+}
+
+.button-submit {
+  display: inline-block;
+  background-color: #434c53;
+  padding: 8px 24px;
+  border: 0.25px solid #64727c;
+  margin: 8px;
+  border-radius: 8px;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 200;
+  color: rgb(245, 245, 245);
+  text-align: center;
+  transition: all 0.2s;
+}
+.button-submit:hover {
+  border: 0.25px solid rgb(245, 245, 245);
+  color: rgb(245, 245, 245);
+  background-color: #566169;
+}
+
+/* TODO: make fadein look smoother */
+.hint {
+  color: rgb(245, 245, 245);
+  margin: 0px;
+  min-height: 32px;
+  animation: fadeIn ease 2s;
+  -webkit-animation: fadeIn ease 2s;
+  -moz-animation: fadeIn ease 2s;
+  -o-animation: fadeIn ease 2s;
+  -ms-animation: fadeIn ease 2s;
+}
+
+.input {
+  padding: 12px 16px;
+  width: 88px;
+  margin: 8px 0;
+  border-radius: 8px;
+  font-family: "Roboto Mono", monospace;
+  border-color: none;
+  border-style: inherit;
+}
+
+.instructions {
+  font-size: 16px;
+  padding: 8px;
+}
+
+.line {
+  width: 32%;
+  height: 1px;
+  border: none;
+  color: #434c53;
+  background-color: #434c53;
+}
+
+.guess {
+  border-radius: 8px;
+  /* max-width: 56px;
+  max-height: 56px; */
+  box-sizing: border-box;
+  margin: 8px 8px 8px 8px;
+  display: inline-block;
+  background-color: #434c53;
+  padding: 16px 32px;
+  border: 0.25px solid #64727c;
+}
+
+/* TODO: fadein only working on first render */
+.guess-feedback {
+  min-height: 50px;
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
+}
+
+.guesses-header {
+  margin: 8px;
+}
+
+.title {
+  margin: 40px;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
