--- a/main.css
+++ b/main.css
@@ -58,16 +58,21 @@
   background-color: #566169;
 }
 
-/* TODO: make fadein look smoother */
 .hint {
   color: rgb(245, 245, 245);
+  font-size: 16px;
   margin: 0px;
   min-height: 32px;
-  animation: fadeIn ease 2s;
-  -webkit-animation: fadeIn ease 2s;
-  -moz-animation: fadeIn ease 2s;
-  -o-animation: fadeIn ease 2s;
-  -ms-animation: fadeIn ease 2s;
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
+  /* color: transparent; */
+  /* animation: blur 5s ease-out 5s;
+  -webkit-animation: 5s blur ease-out 5s;
+  animation-delay: 0.1s;
+  -webkit-animation-delay: 0.1s; */
 }
 
 .input {
@@ -88,6 +93,7 @@
 .line {
   width: 32%;
   height: 1px;
+  margin-top: 0px;
   border: none;
   color: #434c53;
   background-color: #434c53;
@@ -123,6 +129,7 @@
   margin: 40px;
 }
 
+/* Fade-in effect */
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -165,5 +172,64 @@
   }
   100% {
     opacity: 1;
+  }
+}
+
+/* Blur effect */
+@keyframes blur {
+  0% {
+    text-shadow: 0 0 100px #fff;
+    opacity: 0;
+  }
+  5% {
+    text-shadow: 0 0 90px #fff;
+  }
+  15% {
+    opacity: 1;
+  }
+  20% {
+    text-shadow: 0 0 0px #fff;
+  }
+  80% {
+    text-shadow: 0 0 0px #fff;
+  }
+  85% {
+    opacity: 1;
+  }
+  95% {
+    text-shadow: 0 0 90px #fff;
+  }
+  100% {
+    text-shadow: 0 0 100px #fff;
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes blur {
+  0% {
+    text-shadow: 0 0 100px #fff;
+    opacity: 0;
+  }
+  5% {
+    text-shadow: 0 0 90px #fff;
+  }
+  15% {
+    opacity: 1;
+  }
+  20% {
+    text-shadow: 0 0 0px #fff;
+  }
+  80% {
+    text-shadow: 0 0 0px #fff;
+  }
+  85% {
+    opacity: 1;
+  }
+  95% {
+    text-shadow: 0 0 90px #fff;
+  }
+  100% {
+    text-shadow: 0 0 100px #fff;
+    opacity: 0;
   }
 }
