--- a/main.css
+++ b/main.css
@@ -109,6 +109,7 @@
   background-color: #434c53;
   padding: 16px 32px;
   border: 0.25px solid #64727c;
+  border-color: 0.25px solid #64727c;
 }
 
 /* TODO: fadein only working on first render */
